--- a/rwdFinalwork/index.html
+++ b/rwdFinalwork/index.html
@@ -152,7 +152,7 @@
   <div class="container">
     <h2 class="text-align-center h2">聽聽別人的感想</h2>
     <ul class="d-flex d-sm-block">
-      <li class="media" data-aos="zoom-out">
+      <li class="media"data-aos="flip-left">
         <div class="media-header">
           <img src="./assets/images/Welcome---Desktop_12.png" alt="">
         </div>
@@ -165,7 +165,7 @@
           <p class="text-align-end"> -- 產品經理</p>
         </div>
       </li>
-      <li class="media" data-aos="zoom-out">
+      <li class="media"data-aos="flip-left">
         <div class="media-header">
           <img src="./assets/images/Welcome---Desktop_13.png" alt="">
         </div>
@@ -178,7 +178,7 @@
           <p class="text-align-end"> -- 金身道士</p>
         </div>
       </li>
-      <li class="media" data-aos="zoom-out">
+      <li class="media"data-aos="flip-left">
         <div class="media-header">
           <img src="./assets/images/Welcome---Desktop_14.png" alt="">
         </div>
