修正下拉式選單

--- a/jQuery-finalwork/index.html
+++ b/jQuery-finalwork/index.html
@@ -35,15 +35,19 @@
     </header>
     <section>
         <div class="container">
-            <div class="d-flex justify-content-between pt-2 pb-1">
-                <a href="#"><img src="img/logo.png" alt=""></a>
-                <ul class="d-flex list-unstyled jq-list">
+            <div class="d-flex justify-content-between pt-2 pb-1 ">
+                <a href="#">
+                    <h1 class="mb-0">
+                        <img src="img/logo.png" alt="">
+                    </h1>
+                </a>
+                <ul class="d-flex list-unstyled position-relative mb-0">
                     <li class="mr-3 ">
-                        <a href="#" class="text-primary font-weight-bolder ">
+                        <a href="#" class="text-primary font-weight-bolder jq-down">
                             首頁
                         </a>
-                        <ul class="list-unstyled " style="display: none;">
-                            <li >
+                        <ul class="list-unstyled jq-list " >
+                            <li>
                                 <a href="#" >
                                 六角行事曆
                                 </a>
@@ -61,10 +65,10 @@
                         </ul>
                     </li>
                     <li class="mr-3">
-                        <a href="#" class="text-primary font-weight-bolder ">
+                        <a href="#" class="text-primary font-weight-bolder jq-down">
                             產品介紹
                         </a>
-                        <ul class="list-unstyled " style="display: none;">
+                        <ul class="list-unstyled jq-list" >
                             <li >
                                 <a href="#" >
                                 HTML、CSS
@@ -83,10 +87,10 @@
                         </ul>
                     </li>
                     <li class="mr-3">
-                        <a href="#" class="text-primary font-weight-bolder ">
+                        <a href="#" class="text-primary font-weight-bolder jq-down">
                             連絡我們
                         </a>
-                        <ul class="list-unstyled " style="display: none;">
+                        <ul class="list-unstyled jq-list" >
                             <li >
                                 <a href="#" >
                                 email
@@ -334,9 +338,6 @@
             </span>
         </a>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
